stderr
JudgeMan.java:56: error: unreachable statement
        return "No Hand";
        ^
JudgeMan.java:58: error: missing return statement
    }
    ^
2 errors
